<resources>
    <string name="app_name">Acme</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_splash">ACME INC Android App Test 2019</string>
    <string name="hint_user">Username</string>
    <string name="hint_password">Password</string>
    <string name="login">Login</string>
    <string name="dashboard">DASHBOARD</string>
    <string name="lower_dashboard">Dashboard</string>
    <string name="new_ticket">New Ticket</string>
    <string name="menu">Menú</string>
    <string name="calendar">Calendar</string>
    <string name="sync">Sync</string>
    <string name="view_ticket">View Ticket</string>
    <string name="work_ticket">Work Ticket</string>
    <string name="customer_info">Customer Info:</string>
    <string name="scheduled_for">Scheduled For:</string>
    <string name="job_site_address">Job Site Address:</string>
    <string name="distance">Distance:</string>
    <string name="get_directions">Get Directions</string>
    <string name="dispatch_note">Dispatch Note:</string>
    <string name="dept_class">Dept. Class:</string>
    <string name="service_type">Service Type:</string>
    <string name="plumbing">Plumbing</string>
    <string name="call_back">Call Back</string>
    <string name="reason_for_call">Reason for Call:</string>
    <string name="reasons">- Customer has noticed extremely low water pressure\n- Precesion Tune up\n- Estimate panel upgrate</string>
    <string name="ticket">Ticket #</string>
    <string name="ticket_back">Ticket</string>
    <string name="approx">Approx. </string>
    <string name="miles">miles</string>

    <string name="overview">Overview</string>
    <string name="work_details">Work Details</string>
    <string name="purchasing">Purchasing</string>
    <string name="finishing_up">Finishing Up</string>
</resources>