<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@id/splashFragment"
    android:id="@+id/nav_graph">

    <fragment
        android:id="@+id/splashFragment"
        android:name="com.pabloapk.acme.ui.SplashFragment"
        android:label="@string/title_splash"
        tools:layout="@layout/fragment_splash" >
        <action
            android:id="@+id/action_splashFragment_to_loginFragment"
            app:destination="@id/loginFragment"
            app:launchSingleTop="true"
            app:popUpTo="@+id/main_nav_graph"
            app:popUpToInclusive="true"/>
    </fragment>

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.pabloapk.acme.ui.login.LoginFragment"
        android:label="@string/login"
        tools:layout="@layout/fragment_login" >
        <action
            android:id="@+id/action_loginFragment_to_dashboardFragment"
            app:destination="@id/dashboardFragment" />
    </fragment>

    <fragment
        android:id="@+id/dashboardFragment"
        android:name="com.pabloapk.acme.ui.dashboard.DashboardFragment"
        android:label="@string/lower_dashboard"
        tools:layout="@layout/fragment_dashboard" >
        <action
            android:id="@+id/action_dashboardFragment_to_detailFragment"
            app:destination="@id/detailFragment" />

    </fragment>

    <fragment
        android:id="@+id/detailFragment"
        android:name="com.pabloapk.acme.ui.detail_ticket.DetailTicketFragment"
        android:label="@string/work_ticket"
        tools:layout="@layout/fragment_detail_ticket" >
        <action
            android:id="@+id/action_detailFragment_to_mapFragment"
            app:destination="@id/mapFragment" />
        <action
            android:id="@+id/action_detailFragment_to_dashboardFragment"
            app:destination="@id/dashboardFragment" />
        <argument
            android:name="ticketDataArgs"
            app:argType="com.pabloapk.acme.data.model.TicketEntity"/>
    </fragment>

    <fragment
        android:id="@+id/mapFragment"
        android:name="com.pabloapk.acme.ui.MapFragment"
        android:label="@string/get_directions"
        tools:layout="@layout/fragment_map" >
        <action
            android:id="@+id/action_mapFragment_to_detailFragment"
            app:destination="@id/detailFragment" />
        <argument
            android:name="ticketDataArgs"
            app:argType="com.pabloapk.acme.data.model.TicketEntity"/>
    </fragment>

</navigation>