<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.login.LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="300dp"
            app:srcCompat="@drawable/icono"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:id="@+id/image_header"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <!-- TODO: Update blank fragment layout -->
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etUser"
            android:layout_marginTop="@dimen/margin_10"
            android:textCursorDrawable="@drawable/color_cursor"
            android:layout_width="match_parent"
            android:textColor="@color/black_light_border"
            android:textSize="@dimen/standard"
            android:layout_height="wrap_content"
            android:padding="18dp"
            android:hint="@string/hint_user"
            app:drawableStartCompat="@drawable/ic_person"
            android:inputType="text"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:textColorHighlight="@color/black_light"
            android:textColorLink="@color/black_light"
            android:textColorHint="@color/black_light"
            android:drawablePadding="10dp"
            android:background="@drawable/background_edit_login"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_header"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintEnabled="false"
            android:id="@+id/tvInputLayout"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etUser"
            app:passwordToggleEnabled="true">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black_light_border"
                android:textSize="@dimen/standard"
                android:textCursorDrawable="@drawable/color_cursor"
                app:drawableStartCompat="@drawable/ic_password"
                android:padding="18dp"
                android:hint="@string/hint_password"
                android:layout_marginTop="20dp"
                android:inputType="textPassword"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                app:passwordToggleEnabled="true"
                android:textColorHighlight="@color/black_light"
                android:textColorLink="@color/black_light"
                android:textColorHint="@color/black_light"
                android:drawablePadding="10dp"
                android:background="@drawable/background_edit_login"
                app:passwordToggleTint="@color/black_light"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_20"
            android:padding="@dimen/padding_18"
            android:layout_marginStart="@dimen/margin_10"
            android:layout_marginEnd="@dimen/margin_10"
            android:textColor="@color/white"
            android:fontFamily="@font/calibri_regular"
            android:textSize="@dimen/standard"
            android:text="@string/login"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvInputLayout"
            android:background="@drawable/background_btn"
            android:layout_gravity="center_horizontal"/>

    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.constraintlayout.widget.ConstraintLayout>